Simple D3 Demo Showing Data/DOM Relationship

--- a/Presentations/ControlPanel/index.html
+++ b/Presentations/ControlPanel/index.html
@@ -116,7 +116,7 @@
 			<h3>Got Qs?</h3>
 		</div>
 
-		<div class="step" data-scale="2" data-x="0" data-y="5000" data-z="0" data-rotate="0" data-rotate-x="0" data-rotate-y="0">
+		<div id="anonocat" class="step" data-scale="2" data-x="0" data-y="5000" data-z="0" data-rotate="0" data-rotate-x="0" data-rotate-y="0">
 			<img src="images/anonocat.png"/>
 		</div>
 	</div>
